# libledger

./: .editorconfig  LICENSE  README.md  ledger_ping.c  meson.build  meson_options.txt
bolos/: bolos_version.c  exchange_nonce.c  get_deployed_secret.c  get_version.c  meson.build  reset.c  secret.c  target_id.c  validate.c  validate_target_id.c  version.c
docs/: README.md  apdu.md  devices.md  errors.md  libledger.md  transport_protocol.md
ethereum/: ethereum_app.c
examples/: meson.build  ping.c  reset.c  validate.c  version.c
examples/common/: common.c  common.h
include/: meson.build
include/internal/: cursor.h  device.h  macros.h
include/libledger/: apdu.h  buffer.h  device.h  device_internal.h  error.h  libledger.h  meson.build  transport.h  version.h.in
include/libledger/bitcoin/: apdu.h
include/libledger/bolos/: apdu.h  bolos.h  bolos_version.h  constants.h  exchange_nonce.h  get_deployed_secret.h  get_version.h  meson.build  reset.h  secret.h  secure_channel.h  target_id.h  validate.h  validate_target_id.h  version.h
include/libledger/core/: apdu.h  device.h  error.h  meson.build  transport.h  version.h.in
include/libledger/ethereum/: apdu.h  ethereum_app.h
include/libledger/internal/: binary.h
internal/: binary.c  cursor.c  meson.build
libledger/: apdu.c  buffer.c  device.c  error.c  meson.build  transport.c  version.c
libledger/bolos/: meson.build  reset.c  secure_channel.c  validate.c  version.c
src/: meson.build
src/core/: apdu.c  device.c  error.c  meson.build  transport.c  version.c
src/internal/: binary.c  meson.build
